<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/android_img" />

    <TextView
        android:id="@+id/tv_post_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_time"
        app:layout_constraintStart_toStartOf="@id/tv_user_name"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name" />

    <ImageView

        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/ic_globe"
        app:layout_constraintBottom_toBottomOf="@id/tv_post_time"
        app:layout_constraintStart_toEndOf="@id/tv_post_time"
        app:layout_constraintTop_toTopOf="@id/tv_post_time" />


    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/img_profile"
        app:layout_constraintTop_toTopOf="@id/img_profile"
        tools:text="@string/android" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/option"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_user_name" />


    <TextView
        android:id="@+id/tv_post_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autoLink="web"
        android:text="@string/caption"
        android:textColorLink="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_profile" />

    <ImageView
        android:id="@+id/imv_post_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@id/tv_post_caption"
        tools:src="@drawable/android_developer" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="start|center"
        android:padding="8dp"
        android:text="@string/likes"
        android:textColor="@color/grey"
        app:icon="@drawable/like"
        app:iconTint="@android:color/transparent"
        app:iconTintMode="screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imv_post_photo" />

    <ImageView
        android:id="@+id/imv_drop_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/arrow_drop_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imv_post_photo" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cimv_share"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/android_img"
        app:layout_constraintBottom_toBottomOf="@id/imv_drop_down"
        app:layout_constraintEnd_toStartOf="@id/imv_drop_down"
        app:layout_constraintTop_toTopOf="@id/imv_drop_down" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/shares"
        app:layout_constraintBottom_toBottomOf="@id/imv_drop_down"
        app:layout_constraintEnd_toStartOf="@id/cimv_share"
        app:layout_constraintTop_toTopOf="@id/imv_drop_down" />

    <TextView
        android:id="@+id/tv_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_1"
        app:layout_constraintTop_toBottomOf="@id/btn_reactions" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/like"
        android:textColor="@color/grey"
        app:icon="@drawable/ic_like_reaction"
        app:iconTint="@android:color/transparent"
        app:iconTintMode="screen"
        app:layout_constraintEnd_toStartOf="@id/btn_comment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_separator" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/comment"
        android:textColor="@color/grey"
        app:icon="@drawable/ic_comment"
        app:iconTint="@android:color/transparent"
        app:iconTintMode="screen"
        app:layout_constraintEnd_toStartOf="@id/btn_share"
        app:layout_constraintStart_toEndOf="@id/btn_like"
        app:layout_constraintTop_toBottomOf="@id/tv_separator" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/share"
        android:textColor="@color/grey"
        app:icon="@drawable/ic_share"
        app:iconTint="@android:color/transparent"
        app:iconTintMode="screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_comment"
        app:layout_constraintTop_toBottomOf="@id/tv_separator" />


</androidx.constraintlayout.widget.ConstraintLayout>